# bible-dictionary

./: Cargo.toml  Dioxus.toml  README.md  flake.nix
src/: main.rs  views.rs
src/views/: dictionary.rs  home.rs
