[package]
name = "bible-dictionary"
version = "0.1.0"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "=0.7.5", features = ["router"] }
wasm-bindgen = "=0.2.118" # For nixpkgs' pkgs.dioxus-cli with wasm-bindgen-cli_0_2_118

[features]
default = ["web"]
web = ["dioxus/web"]
